--- a/index.html
+++ b/index.html
@@ -74,12 +74,10 @@
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
     <h2>About</h2>
     <hr class="w3-opacity">
-    <p>Some text about me. Some text about me. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing
-      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <p>Hi I'm Jane. I'm currently a SEO Specialist at Performics.
     </p>
     <h3 class="w3-padding-16">My Skills</h3>
-    <p class="w3-wide">Photography</p>
+    <p class="w3-wide">SEO</p>
     <div class="w3-light-grey">
       <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:95%">95%</div>
     </div>
@@ -94,20 +92,20 @@
 
     <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section">
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">14+</span><br>
-        Partners
+        <span class="w3-xlarge">3+</span><br>
+        Years in SEO
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">55+</span><br>
-        Projects Done
+        <span class="w3-xlarge">30+</span><br>
+        Client Exposure
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">89+</span><br>
-        Happy Clients
+        <span class="w3-xlarge">500+</span><br>
+        LinkedIn Connections
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">150+</span><br>
-        Meetings
+        <span class="w3-xlarge">2 months</span><br>
+        Code Experience
       </div>
     </div>
 
@@ -115,21 +113,21 @@
       <i class="fa fa-download"></i> Download Resume
     </button>
 
-    <!-- Testimonials -->
-    <h3 class="w3-padding-24">My Reputation</h3>
+    <!-- Testimonials - Source in from LinkedIn-->
+    <h3 class="w3-padding-24">Projects</h3>
     <img src="/w3images/avatar_smoke.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-text-black w3-margin-right">Chandler Bing.</span> Web Designer.</p>
+    <p><span class="w3-large w3-text-black w3-margin-right">Technical Audits.</span> Web Designer.</p>
     <p>Jane Doe is just awesome. I am so happy to have met her!</p><br>
 
     <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-text-black w3-margin-right">Chris Fox.</span> CEO at Mighty Schools.</p>
+    <p><span class="w3-large w3-text-black w3-margin-right">Competitive Audits.</span> CEO at Mighty Schools.</p>
     <p>Jane Doe saved us from a web disaster.</p><br>
 
     <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-text-black w3-margin-right">Rebecca Flex.</span> CEO at Company.</p>
+    <p><span class="w3-large w3-text-black w3-margin-right">Reporting.</span> CEO at Company.</p>
     <p>No one is better than Jane Doe.</p><br>
 
-    <!-- Grid for pricing tables -->
+    <!-- Grid for pricing tables
     <h3 class="w3-padding-16">My Price</h3>
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half w3-margin-bottom">
@@ -165,8 +163,8 @@
           </li>
         </ul>
       </div>
-    <!-- End Grid/Pricing tables -->
-    </div>
+    End Grid/Pricing tables
+    </div>-->
 
   <!-- End About Section -->
   </div>
@@ -178,14 +176,14 @@
 
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Chicago, US</p>
-      <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
-      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
+      <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +1-815-641-0087</p>
+      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: janekolacki95@gmail.com</p>
     </div>
 
     <!-- Image of location/map -->
     <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;margin:32px 0">
 
-    <p>Lets get in touch. Send me a message:</p>
+    <p>Lets get in touch. Send me a message!</p>
     <form action="/action_page.php" target="_blank">
       <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required name="Email"></p>
@@ -208,7 +206,7 @@
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
-    <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+    <!--<p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>-->
   <!-- End footer -->
   </footer>
 
