--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Intensify by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 	<head>
-		<title>Intensify by TEMPLATED</title>
+		<title>Jane Kolacki</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/style.css" />
 	</head>
 	<body>
 
@@ -18,9 +14,8 @@
 				<nav class="left">
 					<a href="#menu"><span>Menu</span></a>
 				</nav>
-				<a href="index.html" class="logo">intensify</a>
+				<a href="index.html" class="logo">JK</a>
 				<nav class="right">
-					<a href="#" class="button alt">Log in</a>
 				</nav>
 			</header>
 
@@ -28,11 +23,10 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="generic.html">About Me</a></li>
+					<li><a href="elements.html">Travel</a></li>
 				</ul>
 				<ul class="actions vertical">
-					<li><a href="#" class="button fit">Login</a></li>
 				</ul>
 			</nav>
 
