--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Jane Kolacki</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="/style.css" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 
