--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="style.css" />
-<title>HD Monochrome by Bryant Smith</title>
+<title>Jane Kolacki</title>
 </head>
 
 <body>
@@ -12,33 +12,32 @@
         <div class="topNaviagationLink"><a href="index.html">About</a></div>
         <div class="topNaviagationLink"><a href="index.html">Portfolio</a></div>
         <div class="topNaviagationLink"><a href="index.html">Services</a></div>
-	    <div class="topNaviagationLink"><a href="index.html">Contact</a></div>
+	      <div class="topNaviagationLink"><a href="index.html">Contact</a></div>
 	</div>
     <div id="mainPicture">
     	<div class="picture">
-        	<div id="headerTitle">HD Monochrome</div>
-            <div id="headerSubtext">An XHTML 1.0 Strict Template by Bryant Smith</div>
+        	<div id="headerTitle">Jane Kolacki</div>
+            <div id="headerSubtext">Welcome to my portfolio!</div>
         </div>
     </div>
         <div class="contentBox">
     	<div class="innerBox">
-        	<h1>High Definition Monochrome</h1>
+        	<h1>Experience</h1>
           <div class="contentText">
-            <p>You may use this template on any site, anywhere, for free just please leave the link back to me in the footer.   This template validates XHTML Strict 1.0, CSS Validates as well; enjoy :) <a href="#">This is what a link looks like.</a></p><br />
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Integer mi. Vivamus sit amet neque vitae sapien bibendum sodales. Curabitur elementum. Duis imperdiet. Donec eleifend porttitor sapien. Praesent leo. Quisque auctor velit sed tellus. Suspendisse potenti. Aenean laoreet imperdiet nunc. Donec commodo suscipit dolor. Aenean nibh. Sed id odio. Aliquam lobortis risus ut felis. Sed vehicula pellentesque quam.</p><br />
-   <blockquote><p>This is a block quote, use it to include quotes from yourself or others.  All you have to do to include this element is wrap some text around blockquote tags</p></blockquote>
+            <p>SEO Specialist<a href="#">This is what a link looks like.</a></p><br />
+        <p>I'm currently an SEO Specialist at Performics</p><br />
                 </div>
 
 
-        <h1>Titles are H1 Tags</h1>
-            <div class="contentText"><p> Since the titles are H1 tags, try to include your keywords in them as search engines will look at them as being important content.</p><br />
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Integer mi. Vivamus sit amet neque vitae sapien bibendum sodales. Curabitur elementum. Duis imperdiet. Donec eleifend porttitor sapien. Praesent leo. Quisque auctor velit sed tellus. Suspendisse potenti. Aenean laoreet imperdiet nunc. Donec commodo suscipit dolor. Aenean nibh. Sed id odio. Aliquam lobortis risus ut felis. Sed vehicula pellentesque quam.</p><br />
+        <h1>Front-End Web Development</h1>
+            <div class="contentText"><p> Completed a 6 week front-end web development course.</p><br />
+        <p>I learned the basics of HTML, CSS, and JavaScript.</p><br />
 
           <p>Vestibulum augue quam, interdum id, congue semper, convallis non, velit. Quisque augue tortor, tristique ac, scelerisque eget, aliquam id, sem. Aenean lorem. Fusce velit nibh, dapibus quis, laoreet nec, porta a, dui. Nullam ac urna. Proin eget elit. Nunc scelerisque venenatis urna. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce congue, turpis ut commodo mattis, pede erat fringilla tellus, pulvinar suscipit odio lorem sed pede.</p></div>
 
 
-        <h1>Yet Another One!</h1>
-          <div class="contentText"><p>You may use this template on any site, anywhere, for free just please leave the link back to me in the footer.   This template validates XHTML Strict 1.0, CSS Validates as well; enjoy :) </p><br />
+        <h1>Types of Projects</h1>
+          <div class="contentText"><p> Technical Audits, Content Audits, etc.</p><br />
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Integer mi. Vivamus sit amet neque vitae sapien bibendum sodales. Curabitur elementum. Duis imperdiet. Donec eleifend porttitor sapien. Praesent leo. Quisque auctor velit sed tellus. Suspendisse potenti. Aenean laoreet imperdiet nunc. Donec commodo suscipit dolor. Aenean nibh. Sed id odio. Aliquam lobortis risus ut felis. Sed vehicula pellentesque quam.</p><br />
           <p>Vestibulum augue quam, interdum id, congue semper, convallis non, velit. Quisque augue tortor, tristique ac, scelerisque eget, aliquam id, sem. Aenean lorem. Fusce velit nibh, dapibus quis, laoreet nec, porta a, dui. Nullam ac urna. Proin eget elit. Nunc scelerisque venenatis urna. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce congue, turpis ut commodo mattis, pede erat fringilla tellus, pulvinar suscipit odio lorem sed pede.</p></div>
 
