--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <title>Alias Colorlib &mdash; One Page Template for Personal/CV Website</title>
+    <title>Jane Kolacki - Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -17,11 +17,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700" rel="stylesheet">
 
-
   </head>
   <body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
-
-
 
     <nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
 
@@ -30,15 +27,13 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand" href="index.html">Alias</a>
+        <a class="navbar-brand" href="index.html">JK</a>
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#section-services">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="#section-portfolio">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
-            <li class="nav-item"><a class="nav-link" href="#section-blog">Blog</a></li>
             <li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
           </ul>
         </div>
@@ -52,8 +47,8 @@
       <div class="container">
         <div class="row intro-text align-items-center justify-content-center">
           <div class="col-md-10 text-center">
-            <h1 class="site-heading site-animate">Howdy, I'm <strong>Jean Smith</strong></h1>
-            <p class="lead site-subheading mb-4 site-animate">A Product Designer working at Facebook. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <h1 class="site-heading site-animate">Welcome, I'm <strong>Jane Kolacki</strong></h1>
+            <p class="lead site-subheading mb-4 site-animate">A Search Engine Optimization Specialist at a digital agency.</p>
             <p><a href="#section-about" class="smoothscroll btn btn-primary px-4 py-3">More On Me</a></p>
           </div>
         </div>
@@ -71,8 +66,8 @@
             <div class="section-heading">
               <h2>About <strong>Me</strong></h2>
             </div>
-            <p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-            <p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p class="lead">I'm an SEO Specialist responsible for analyzing web content to improve organic search.</p>
+            <p class="mb-5  ">I research and recommend best practices for online content, report performance metrics, and optimize landing pages to increase search visibility.</p>
 
             <p>
               <a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
@@ -89,7 +84,7 @@
           </div>
           <div class="col-md-9">
             <div class="skill">
-              <h3>Design</h3>
+              <h3>Technical SEO</h3>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                   <span>85%</span>
@@ -98,36 +93,36 @@
             </div>
 
             <div class="skill">
-              <h3>HTML5</h3>
+              <h3>SEO Authority</h3>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 98%" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                   <span>98%</span>
                 </div>
               </div>
             </div>
 
             <div class="skill">
-              <h3>CSS3</h3>
+              <h3>Content Optimization</h3>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 97%" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" style="width: 86%" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100">
                   <span>97%</span>
                 </div>
               </div>
             </div>
 
             <div class="skill">
-              <h3>WordPress</h3>
+              <h3>Site Speed</h3>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 88%" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" style="width: 57%" aria-valuenow="57" aria-valuemin="0" aria-valuemax="100">
                   <span>88%</span>
                 </div>
               </div>
             </div>
 
             <div class="skill">
-              <h3>Bootstrap</h3>
+              <h3>Mobile Usability</h3>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 92%" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                   <span>92%</span>
                 </div>
               </div>
