--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="row mb-4">
           <div class="col-md-12">
             <div class="section-heading text-center">
-              <h2>My <strong>Services</strong></h2>
+              <h2>My<strong>Experience</strong></h2>
             </div>
           </div>
         </div>
@@ -191,7 +191,7 @@
               <span class="icon">
                 <span class="icon-phone3"></span>
               </span>
-              <h3 class="mb-4">Mobile Optimize</h3>
+              <h3 class="mb-4">Technical SEO Audit</h3>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
               <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
             </div>
@@ -201,7 +201,7 @@
               <span class="icon">
                 <span class="icon-wallet2"></span>
               </span>
-              <h3 class="mb-4">Increase Revenue</h3>
+              <h3 class="mb-4">Content Audit</h3>
               <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
               <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
             </div>
@@ -211,7 +211,7 @@
               <span class="icon">
                 <span class="icon-lightbulb"></span>
               </span>
-              <h3 class="mb-4">Intuitive Idea</h3>
+              <h3 class="mb-4">Site Speed Audit</h3>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
               <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
             </div>
@@ -222,32 +222,12 @@
               <span class="icon">
                 <span class="icon-phone3"></span>
               </span>
-              <h3 class="mb-4">Mobile Optimize</h3>
+              <h3 class="mb-4">Monthly Reporting</h3>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
               <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 text-center mb-5">
-            <div class="site-service-item site-animate" data-animate-effect="fadeIn">
-              <span class="icon">
-                <span class="icon-wallet2"></span>
-              </span>
-              <h3 class="mb-4">Increase Revenue</h3>
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-              <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 text-center mb-5">
-            <div class="site-service-item site-animate" data-animate-effect="fadeIn">
-              <span class="icon">
-                <span class="icon-lightbulb"></span>
-              </span>
-              <h3 class="mb-4">Intuitive Idea</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-              <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
-            </div>
-          </div>
-
+                    
         </div>
       </div>
     </section>
@@ -264,8 +244,6 @@
                             <li class="active" data-filter="*">All</li>
                             <li data-filter=".packaging">Packaging</li>
                             <li data-filter=".mockup">Mockup</li>
-                            <li data-filter=".typography">Typography</li>
-                            <li data-filter=".photography">Photography</li>
                         </ul>
                     </div>
 
@@ -340,40 +318,7 @@
                                     <div class="cat">Packaging</div>
                                 </div>
                             </div>
-                            <div class="single-portfolio col-sm-4 all typography">
-                              <div class="relative">
-                              <div class="thumb">
-                                  <div class="overlay overlay-bg"></div>
-                                   <img class="image img-fluid" src="images/p5.jpg" alt="">
-                                </div>
-                  <a href="images/p5.jpg" class="img-pop-up">
-                    <div class="middle">
-                      <div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-                    </div>
-                  </a>
-                              </div>
-                                <div class="p-inner">
-                                    <h4>Isometric 3D Extrusion</h4>
-                                    <div class="cat">Typography</div>
-                                </div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all photography">
-                              <div class="relative">
-                                <div class="thumb">
-                                  <div class="overlay overlay-bg"></div>
-                                   <img class="image img-fluid" src="images/p6.jpg" alt="">
-                                </div>
-                  <a href="images/p6.jpg" class="img-pop-up">
-                    <div class="middle">
-                      <div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-                    </div>
-                  </a>
-                              </div>
-                                <div class="p-inner">
-                                    <h4>White Space Photography</h4>
-                                    <div class="cat">photography</div>
-                                </div>
-                            </div>
+
                         </div>
                     </div>
       </div>
