--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <p>
               <a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-              <a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download Resume</a>
+              <a href="https://www.linkedin.com/in/jane-kolacki-57686382/" class="btn btn-secondary px-4 py-2 btn-sm">Download Resume</a>
             </p>
           </div>
         </div>
